@@ -1,0 +1,3 @@
+[1, 1, 3, 5, 5, 8, 9]
+55
+3628800
