@@ -1,0 +1,4 @@
+#!/bin/bash
+idris $@ test027.idr -o test027
+./test027
+rm -f test027 *.ibc
