@@ -4,6 +4,7 @@ New in 0.9.8:
 User visible changes:
 
 * Added "rewrite ... in ..." construct
+* Allow type class constraints in 'using' clauses
 * Renamed EFF to EFFECT in Effect package
 * Experimental Java backend
 * Tab completion in REPL
